--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>eifefe</title>
+</head>
+<body bgcolor="#1e1e2f" text="#ffffff" link="#00bcd4" vlink="#0097a7">
+  <h1>cc<h1>
+  <p>efeg</p>
+  <a href="https://github.com/Raytoou">Github</a>
+</body>
+</html>
